--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,8 @@
     "nodemon": "^3.1.10",
     "stripe": "^18.2.1",
     "svix": "^1.42.0"
+  },
+  "devDependencies": {
+    "jest": "^30.0.5"
   }
 }
