--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZmFpdGhmdWwtYnVmZmFsby00OS5jbGVyay5hY2NvdW50cy5kZXYk
 VITE_CURRENCY = '$'
+VITE_BACKEND_URl= 'http://localhost:3000'
